[package]
name = "beacon-state-proof"
version = "0.1.0"
edition = "2021"
description = "A Rust library for fetching state proofs from an Ethereum beacon node."
license = "MIT"
repository = "https://github.com/petscheit/beacon-state-proof"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.215"
tokio = { version = "1", features = ["full"] }
types = { git = "https://github.com/petscheit/lighthouse", package = "types" }
